# eda

./: .gitignore  LICENSE.md  README.md  docker-compose.infra.yml  docker-compose.microservices.yml
infra/filebeat/: filebeat.docker.yml
infra/logstash/: logstash.conf
infra/prometheus/config/: prometheus.yml
infra/rabbitmq/: Dockerfile  definitions.json
k8s/infra/elasticsearch/: service.yml  statefulset.yml
k8s/infra/filebeat/: clusterrole.yml  configmap.yml  daemonset.yml  role.yml
k8s/infra/grafana/: deployment.yml  service.yml
k8s/infra/kibana/: deployment.yml  service.yml
k8s/infra/logstash/: configmap.yml  deployment.yml  service.yml
k8s/infra/metrics-server/: clusterrole.yml  clusterrolebinding.yml  deployment.yml
k8s/infra/prometheus/: configmap.yml  deployment.yml  persistentvolumeclaim.yml  service.yml
microservices/failed_order_handler/: Dockerfile  pyproject.toml
microservices/notification/: pyproject.toml
microservices/order_generation/: Dockerfile  pyproject.toml
microservices/order_generation/app/: config.py  constants.py  main.py  routers.py  schemas.py  utils.py
microservices/order_generation/app/extensions/: messaging.py  rabbitmq.py
microservices/order_generation/app/healthcheck/: schemas.py  views.py
microservices/order_generation/app/order/: schemas.py  views.py
microservices/order_processing/: Dockerfile  pyproject.toml
microservices/payment_processing/: pyproject.toml
microservices/payment_processing/app/: main.py  rabbitmq_pool.py
microservices/shipment_management/: Dockerfile  pyproject.toml
(+38 files in other folders)
