[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"

[tool.flake8]
max-line-length = 119
max-complexity = 10
extend-ignore = ["E203", "W605"]

[tool.poetry]
name = "order_generation"
version = "0.1.0"
description = "Order Generation"
authors = ["Evgeni Sautin <evgeni.sautin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.18.4"
quart-schema = "^0.17.1"
pydantic = "^2.3.0"
aio-pika = "^9.2.2"
hypercorn = "^0.14.4"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
